--- a/PlanesRecetas.webapi/appsettings.Development.json
+++ b/PlanesRecetas.webapi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
   }
 }
