--- a/Pact/consumer/package.json
+++ b/Pact/consumer/package.json
@@ -15,14 +15,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@faker-js/faker": "^10.1.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "chai": "^5.1.2",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "mocha": "^11.7.5",
-    "chai": "^5.1.2"
+    "mocha": "^11.7.5"
   }
 }
