--- a/PlanesRecetas.webapi/appsettings.Development.json
+++ b/PlanesRecetas.webapi/appsettings.Development.json
@@ -7,5 +7,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "planRecetaUser",
+    "Password": "planRecetaPassword",
+    "QueueName": "hello-quee"
   }
 }
