--- a/PlanesRecetas.infraestructure/PlanesRecetas.infraestructure.csproj
+++ b/PlanesRecetas.infraestructure/PlanesRecetas.infraestructure.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,7 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="RabbitMQ\" />
+    <Folder Include="RabbitMQ\Consumers\" />
   </ItemGroup>
 
 </Project>
