--- a/PlanesRecetasWorkerService/appsettings.Development.json
+++ b/PlanesRecetasWorkerService/appsettings.Development.json
@@ -2,12 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=appuser;Password=12345678;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
   },
   "RabbitMQ": {
     "HostName": "localhost",
