--- a/PlanesRecetas.webapi/appsettings.json
+++ b/PlanesRecetas.webapi/appsettings.json
@@ -9,6 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=appuser;Password=12345678;TrustServerCertificate=True;"
   },
+  "DataBaseSettings": {
+    "ConnectionString": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
+  },
   "RabbitMQ": {
     "HostName": "localhost",
     "Port": 5672,
