--- a/PlanesRecetas.webapi/appsettings.Development.json
+++ b/PlanesRecetas.webapi/appsettings.Development.json
@@ -8,11 +8,47 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
   },
-  "RabbitMQ": {
-    "HostName": "localhost",
+  "DataBaseSettings": {
+    "ConnectionString": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    }
+  },
+  "UseSecretManager": false,
+  "JwtOptions": {
+    "Lifetime": 30,
+    "SecretKey": "HL#6j=4;5H{5qZ#M=6J!1[W<YvWdbzEif|M]:ZB<6<{ap^K!@Tg{];OD0E",
+    "ValidAudience": "storeApp",
+    "ValidIssuer": "identity",
+    "ValidateAudience": true,
+    "ValidateIssuer": true,
+    "ValidateLifetime": true
+  },
+  "RabbitMqSettings": {
+    "Host": "localhost",
     "Port": 5672,
     "UserName": "planRecetaUser",
     "Password": "planRecetaPassword",
-    "QueueName": "hello-quee"
+    "QueueName": "plan-created",
+    "VirtualHost": "/"
+  },
+  "ServiceRegistration": {
+    "ServiceDiscoveryAddress": "http://localhost:8500",
+    "Host": "https://localhost",
+    "Port": 7291,
+    "ServiceId": "catalog"
+  },
+  "Seq": {
+    "ServerUrl": "http://localhost:5341"
+  },
+  "JaegerSettings": {
+    "Host": "localhost",
+    "Port": 6831
   }
 }
