--- a/PlanesRecetasWorkerService/PlanesRecetasWorkerService.csproj
+++ b/PlanesRecetasWorkerService/PlanesRecetasWorkerService.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-PlanesRecetasWorkerService-5589e3c5-e741-43b3-9354-e4d9996df57f</UserSecretsId>
@@ -12,8 +12,36 @@
   <ItemGroup>
     <PackageReference Include="Joseco.DDD.Core" Version="1.0.2" />
     <PackageReference Include="MediatR" Version="13.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
+	
+	<PackageReference Include="Joseco.Communication.External.RabbitMQ" Version="1.0.2" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4" />
+
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+		<PrivateAssets>all</PrivateAssets>
+		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+
+	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+
+	<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="9.0.3" />
+	<PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
+	<PackageReference Include="AspNetCore.HealthChecks.UI" Version="9.0.0" />
+	<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
+	<PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="9.0.0" />
+
+	<PackageReference Include="Joseco.Outbox.EFCore" Version="1.0.4" />
+	<PackageReference Include="Joseco.Secrets.HashicorpVault" Version="1.0.0" />
+	<PackageReference Include="Npgsql.OpenTelemetry" Version="9.0.3" />
+
+	<PackageReference Include="Nur.Store2025.Access.Catalog" Version="1.0.0" />
+
+	<PackageReference Include="Nur.Store2025.Observability" Version="1.0.0" />
+	<PackageReference Include="Nur.Store2025.Security" Version="1.0.0" />
+
+	<PackageReference Include="Scrutor" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
