--- a/PlanesRecetasWorkerService/appsettings.Development.json
+++ b/PlanesRecetasWorkerService/appsettings.Development.json
@@ -5,14 +5,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
+  "DataBaseSettings": {
+    "ConnectionString": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
   },
-  "RabbitMQ": {
-    "HostName": "localhost",
+  "RabbitMqSettings": {
+    "Host": "localhost",
     "Port": 5672,
     "UserName": "planRecetaUser",
     "Password": "planRecetaPassword",
-    "QueueName": "hello-quee"
+    "QueueName": "plan-created",
+    "VirtualHost": "/"
   }
 }
