--- a/PlanesRecetasWorkerService/appsettings.json
+++ b/PlanesRecetasWorkerService/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
+  "DataBaseSettings": {
+    "ConnectionString": "Server=DESKTOP-087TVGU\\SQLEXPRESS;Database=appservice;User Id=sa;Password=Password12345;TrustServerCertificate=True;"
   },
   "RabbitMQ": {
     "HostName": "localhost",
